<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/main_content" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="#ffffffff" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="1.0"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.36">
            <ImageView android:id="@id/barcodeLogo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/privacyfriendlyappslogo" android:adjustViewBounds="true" />
        </LinearLayout>
        <TextView android:layout_gravity="center_horizontal" android:id="@id/appName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/app_name_long" />
        <TextView android:layout_gravity="center_horizontal" android:id="@id/textFieldVersion" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/version_number" />
        <TextView android:layout_gravity="center_horizontal" android:id="@id/textFieldAuthor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/about_author" />
        <RelativeLayout android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" />
        <TextView android:textStyle="bold" android:layout_gravity="center_horizontal" android:id="@id/textFieldAffiliation" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/about_affiliation" />
        <ImageView android:id="@id/imageView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="?secusoLogoDrawable" android:adjustViewBounds="true" />
        <TextView android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/privacy_friendly" />
        <TextView android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/more_info" />
        <TextView android:textStyle="bold" android:layout_gravity="center_horizontal" android:id="@id/secusoWebsite" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/url" />
        <TextView android:textStyle="bold" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/githubURL" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/github" />
    </LinearLayout>
</ScrollView>
