<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/content_main" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <TextView android:textSize="18.0sp" android:id="@id/chooseDiceHeading" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/choose_dice_heading" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="18.0sp" android:id="@id/chooseDiceNumber" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="5" app:layout_constraintBaseline_toBaselineOf="@id/chooseDiceHeading" app:layout_constraintStart_toEndOf="@id/chooseDiceHeading" />
        <SeekBar android:id="@id/seekBar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:max="19" android:progress="4" android:layout_below="@id/chooseDiceHeading" android:layout_alignParentLeft="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/chooseDiceHeading" />
        <TextView android:textSize="18.0sp" android:id="@id/chooseFacesHeading" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/choose_face_heading" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/seekBar" />
        <TextView android:textSize="18.0sp" android:id="@id/chooseFaceNumber" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="6" app:layout_constraintBaseline_toBaselineOf="@id/chooseFacesHeading" app:layout_constraintStart_toEndOf="@id/chooseFacesHeading" />
        <SeekBar android:id="@id/seekBarFace" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="16.0dip" android:max="19" android:progress="5" android:layout_below="@id/chooseFacesHeading" android:layout_alignParentLeft="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/chooseFaceNumber" />
        <Button android:textSize="20.0sp" android:textColor="@color/white" android:id="@id/rollButton" android:background="@drawable/button_fullwidth" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/roll_button" android:layout_centerHorizontal="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/seekBarFace" />
        <TextView android:id="@id/sumTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="16.0dip" android:text="@string/main_dice_sum" android:layout_below="@id/rollButton" android:layout_centerHorizontal="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/rollButton" />
        <androidx.recyclerview.widget.RecyclerView android:id="@id/dices" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_centerHorizontal="true" app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/sumTextView" app:spanCount="5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</merge>
